# VyperImager

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TODO.md  appdefs.h  archdeps.txt  binary_interface.c  binary_interface.h  callbacks.c  callbacks.h  devinfo.c  devinfo.h  dialogs.c  dialogs.h  image_types.h  main.c  mockup.c  pages.c  pages.h  stack.h
arch-system/: packages.both
arch-system/airootfs/etc/skel/: .xinitrc
arch-system/airootfs/etc/skel/.config/i3/: config
arch-system/airootfs/root/: customize_airootfs.sh
docs/: app_flow.md
src/: CMakeLists.txt  appbook.cc  appbook.h  appdefs.h  appwin.cc  appwin.h  binary_interface.c  binary_interface.cc  binary_interface.cc~  binary_interface.h  blockdev_liststore.cc  blockdev_liststore.h  blockdev_treeview.cc  blockdev_treeview.h  callbacks.c  callbacks.h  control_button.cc  control_button.h  device.cc  device.h  devinfo.c  dialogs.c  dialogs.cc  dialogs.h  infocont.h  main.c  main.cc  pages.c  pages.cc  pages.h  stack.c  stack.h
src/old_c/: binary_interface.c  binary_interface.h  dialogs.c  pages.c  stack.c
